# psi-plugins

./: CMakeLists.txt  README.md  run.sh  waf  wscript
UI/: Envelope.H  Fader.H  PeakMeter.H  psiDialX.H  psiDialX.cxx  psiDialX_Mod.H  psiENV.H  psiLFO.H  psiLabelBox.H  psiMidiMapping.H  ui_util.h
common/: adsr.h  biquad.h  bl_osc.c  bl_osc.h  bl_osc_g.h  decim.h  delay.h  filter.h  interp.h  ladspa-util.h  ls_filter.h  midi_map.h  noise.c  noise.h  osc_common.h  oscillator.h  roland.h  test.c  tladder.h  types.h  voice.c  voice.h  voice_params.h
midi_gate-psi.lv2/: README.md  UI  manifest.ttl.in  midi_gate.c  midi_gate.h  midi_gate.ttl  midi_gate_ui.cxx  midi_gate_widget.cxx  midi_gate_widget.fl  midi_gate_widget.h  wscript
midi_rnd-psi.lv2/: README.md  manifest.ttl.in  midi_rnd.c  midi_rnd.ttl  wscript
sidechain_gate-psi.lv2/: README.md  manifest.ttl.in  sidechain_gate.c  sidechain_gate.h  sidechain_gate.ttl  sidechain_gate_ui.cxx  sidechain_gate_widget.cxx  sidechain_gate_widget.fl  sidechain_gate_widget.h  wscript
super_welle.lv2/: README.md  manifest.ttl.in  super_welle.c  super_welle.h  super_welle.ttl  super_welle.ttl.in  super_welle_bg.xcf  super_welle_ui.cxx  super_welle_widget.cxx  super_welle_widget.fl  super_welle_widget.h  synth.c  synth.h  ttl_out.sh  wscript
